- Fix: Visual defect in links for changing mode. - Fix: Help link too close to mode links.

--- a/OpenXavaTest/web/naviox/style/naviox.css
+++ b/OpenXavaTest/web/naviox/style/naviox.css
@@ -379,6 +379,10 @@ input[type="text"]:focus, input[type="password"]:focus, input[type="file"]:focus
 	-webkit-box-shadow: 0px 1px 2px #CCCCCC;
 }
 
+.ox-button-bar-mode-button { 
+	border: none;
+}
+
 .ox-button-bar a:focus { 
 	outline: none; 
 }
@@ -504,10 +508,19 @@ input[type="button"]:active, A#show_modules.show-modules-selected {
 	border-style: none;
 	height: 28px;
 	background: white;
-	color: #191919;
+	color: #191919;	
 	box-shadow: 0px -3px 4px #CCCCCC; 
-	-moz-box-shadow: 0px -5px 4px #CCCCCC; 
-	-webkit-box-shadow: 0px -3px 4px #CCCCCC;	
+	-moz-box-shadow: 0px -3px 4px #CCCCCC;  
+	-webkit-box-shadow: 0px -3px 4px #CCCCCC;
+}
+
+.ox-active .ox-button-bar-mode-button { 
+	padding-right: 0px;
+}
+
+.ox-button-bar-active-mode-button-content { /* tmp */ 
+	background: white;  
+	height: 36px;
 }
 
 .ox-list-header th, .ox-list-subheader th, .ox-list-pair td, .ox-list-odd td, .ox-total-row td  { 
@@ -904,4 +917,8 @@ div.ox-subcontroller table{
 	color: #5755D2;
 	font-size: 1.02em;
 	text-decoration: none;
+}
+
+.ox-help { 
+	margin-left: 5px;
 }
